fix: api definition & updated base url
